--- a/package.json
+++ b/package.json
@@ -9,20 +9,34 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/pm": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
+    "@types/multi-number-parse": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx-preview": "^0.3.7",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.552.0",
+    "multi-number-parse": "^1.1.0",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
+    "node-html-parser": "^7.0.1",
+    "print-js": "^1.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-json-tree": "^0.20.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
