--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-table": "^3.14.0",
     "@tiptap/extension-text": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extensions": "^3.14.0",
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
