--- a/package.json
+++ b/package.json
@@ -9,29 +9,33 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "@inj-src/docx-preview": "^0.3.8",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/core": "^3.10.7",
     "@tiptap/extension-document": "^3.14.0",
-    "@tiptap/extension-image": "^3.14.0",
-    "@tiptap/extension-paragraph": "^3.14.0",
-    "@tiptap/extension-table": "^3.14.0",
     "@tiptap/extension-text": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
     "@tiptap/extensions": "^3.14.0",
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
-    "@tiptap/starter-kit": "^3.13.0",
+    "@tiptap/starter-kit": "^3.10.7",
+    "@tiptap/suggestion": "^3.14.0",
     "@types/multi-number-parse": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fast-equals": "^5.3.3",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.552.0",
     "multi-number-parse": "^1.1.0",
     "next": "16.0.1",
@@ -40,18 +44,23 @@
     "print-js": "^1.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hotkeys-hook": "^5.2.1",
     "react-json-tree": "^0.20.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@ariakit/react": "^0.4.19",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "sass": "^1.94.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
