--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tiptap/core": "^3.10.7",
     "@tiptap/extension-document": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-table": "^3.14.0",
     "@tiptap/extension-text": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
     "@tiptap/extensions": "^3.14.0",
