--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "fast-equals": "^5.3.3",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
+    "just-handlebars-helpers": "^1.0.19",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.552.0",
+    "moment": "^2.30.1",
     "multi-number-parse": "^1.1.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
