--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
+    "pagedjs": "^0.4.3",
     "print-js": "^1.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
