--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.20.0",
+    "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/state": "^6.5.3",
+    "@codemirror/view": "^6.39.9",
     "@inj-src/docx-preview": "^0.4.3",
     "@inj-src/pagedjs": "0.5.0-beta.2",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -22,6 +28,7 @@
     "@types/multi-number-parse": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.2",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
     "just-handlebars-helpers": "^1.0.19",
