--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@codemirror/state": "^6.5.3",
     "@codemirror/view": "^6.39.9",
     "@inj-src/docx-preview": "^0.4.3",
-    "@inj-src/pagedjs": "0.5.0-beta.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -37,6 +36,7 @@
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
+    "pagedjs": "^0.4.3",
     "print-js": "^1.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
