--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/jszip": "^3.4.1",
     "@types/multi-number-parse": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
+    "jszip": "^3.10.1",
     "just-handlebars-helpers": "^1.0.19",
     "lucide-react": "^0.552.0",
     "multi-number-parse": "^1.1.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
-    "node-html-parser": "^7.0.1",
     "pagedjs": "^0.4.3",
     "print-js": "^1.6.0",
     "react": "19.2.0",
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "sass": "^1.94.0",
