--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "codemirror": "^6.0.2",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
+    "html-react-parser": "^5.2.11",
     "jszip": "^3.10.1",
     "just-handlebars-helpers": "^1.0.19",
     "lucide-react": "^0.552.0",
