--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
+    "dompurify": "^3.3.1",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
-    "html-react-parser": "^5.2.11",
     "jszip": "^3.10.1",
     "just-handlebars-helpers": "^1.0.19",
     "lucide-react": "^0.552.0",
@@ -42,6 +42,7 @@
     "print-js": "^1.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-shadow": "^20.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
