feat: Add Handlebars `img` helper and merge custom fields into template data for preview.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-shadow": "^20.6.0",
+    "react-simple-code-editor": "^0.14.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
